Fix button layout shift, accessible classname for tabs

--- a/src/ui-core/styles/button.module.scss
+++ b/src/ui-core/styles/button.module.scss
@@ -39,6 +39,7 @@
 	position: relative;
 	transition: box-shadow .2s ease-in-out;
 	border-radius: 3px;
+	overflow: hidden;
 
 	&::before, &::after {
 		content: "";
