--- a/src/ui-core/styles/modal.module.scss
+++ b/src/ui-core/styles/modal.module.scss
@@ -1,29 +1,29 @@
 /* Overlay */
 .overlay {
-  position: fixed;
-  inset: 0;
-  display: flex;
-  justify-content: center;
-  z-index: 100;
-  background-color: rgba(0, 3, 13, 0.3);
+	position: fixed;
+	inset: 0;
+	display: flex;
+	justify-content: center;
+	z-index: 100;
+	backdrop-filter: blur(1px);
 }
 .modal {
-  background-color: #060d33fa;
-  flex: 1;
-  max-width: 840px;
-  width: 100%;
-  align-self: center;
-  border-radius: 8px;
-  min-height: min(100%, 50vh);
-  margin: 0.5rem;
-  box-shadow: 0 0px 2em 2px rgb(0 68 117 / 50%);
-  padding: 2em;
-  border: 1px solid #00628b;
+	background-image: linear-gradient(53deg, #00145f, #00000000), radial-gradient(#0750fd, #01275b);
+	flex: 1;
+	max-width: 880px;
+	width: 100%;
+	align-self: center;
+	border-radius: 3px;
+	min-height: min(100%, 54vh);
+	margin: 0.5rem;
+	padding: 2em;
+	border: 1px solid #00628b;
 	max-height: 80vh;
 	overflow-y: auto;
 	display: flex;
 	flex-direction: column;
-  outline: none;
-  position: relative;
-  isolation: isolate;
+	outline: none;
+	position: relative;
+	isolation: isolate;
+	font-size: 1.1em;
 }
