--- a/src/ui-core/styles/tabs.module.scss
+++ b/src/ui-core/styles/tabs.module.scss
@@ -17,7 +17,6 @@
 	background-color: transparent;
 	transition: .2s ease-in-out;
 	border-radius: 4px;
-	font-size: 1rem;
 	white-space: nowrap;
 
 	&:hover, &.active:hover {
